--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .menu{
     background-color: #3b3d42 !important;
-    z-index: 1331231312312313132132;
+    z-index: 13;
 }
 .navText{
     font-size: 1rem;
