--- a/components/Slider/Slider.module.css
+++ b/components/Slider/Slider.module.css
@@ -1,5 +1,5 @@
 .sliderHomePage{
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     background-image:url("/images/slide-1.jpg");
     background-position: center;
@@ -23,5 +23,6 @@
 
 .textSliderSecond{
     font-size: 2.5rem;
+    text-align: center;
 }
 /*responsive lg*/
