--- a/components/NavDrawer/style.module.css
+++ b/components/NavDrawer/style.module.css
@@ -1,4 +1,8 @@
 .navText{
     text-decoration: none;
     padding:12px;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
