--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -5,6 +5,9 @@
 .navText{
     font-size: 1rem;
     padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 @media (max-width: 600px){
     .navText{
