--- a/components/sectionAboutSecond/AboutSecond.module.css
+++ b/components/sectionAboutSecond/AboutSecond.module.css
@@ -15,6 +15,8 @@
     width: 20%;
     height: 0.4rem;
     background-color: #f7992b;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
 .bodySectionImgFirst{
