--- a/pages/services/Services.module.css
+++ b/pages/services/Services.module.css
@@ -9,12 +9,10 @@
      object-fit: cover;
  }
 .boxBodyThree{
-    width: 100%;
-    height: 50rem;
     background: black;
-    padding-left: 11rem;
-    padding-top: 5rem;
-    padding-right: 3rem;
+    /*padding-left: 11rem;*/
+    /*padding-top: 5rem;*/
+    /*padding-right: 3rem;*/
 }
 .boxBodyText{
     width: 100%;
