--- a/components/secServicesSecond/ServicesSecond.module.css
+++ b/components/secServicesSecond/ServicesSecond.module.css
@@ -1,6 +1,6 @@
 .secPricesPlan{
     width: 100%;
-    height: 60rem;
+    height: 65rem;
     background-color: black;
 
 }
@@ -58,7 +58,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -3rem;
+    /*margin-top: -3rem;*/
 }
 /*.BoxTotalPrice{*/
 /*    width: 90%;*/
