--- a/pages/services/Services.module.css
+++ b/pages/services/Services.module.css
@@ -38,6 +38,7 @@
 .SendEmailGrid{
     width: 100%;
     background-color: #f7992b;
+    margin-top: 12.5rem;
 }
 @media (max-width: 600px) {
     .boxBodyThree{
@@ -46,5 +47,8 @@
         padding-right: 3rem;
         height: 40rem;
     }
+    .SendEmailGrid{
+        margin-top: 0rem;
 
+    }
 }
